argocd/external-services/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-tdarr
spec:
  type: ExternalName
  externalName: truenas.bowmans.site
  ports:
    - port: 30028
