argocd/external-services/tdarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ext-ingress-route-tdarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`tdarr.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-tdarr
        port: 30028
  tls:
    secretName: ext-cert-tdarr
